blue-green/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-preview
  namespace: whoapp
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 80
